# qctools

./: .clang-format  .gitignore  CMakeLists.txt  README.md
atools/: async_locked.h  main.cpp
no_copy/: main.cpp  no_copy.hpp
to_struct/: main.cpp  to_struct.hpp
tsafe/: tests.cpp  tsafe.hpp
zip/: main.cpp  zip.hpp
